[package]
name = "cosmoloto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.3", features = ["staking"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
cw-utils = "1.0"
cw-storage-plus = "1.1"

[dev-dependencies]
cw-multi-test = "0.16"

[profile.release]
lto = true